--- a/public_html/css/custom-style.css
+++ b/public_html/css/custom-style.css
@@ -4,13 +4,21 @@ body{
 
 div{
     border-style:  solid;
-    border-width: 10px
+    border-width: 10px;
+        padding: 30px
 }
 
 .container {
-    border-color: grey;
+    border-color: whitesmoke;
 }
 
 .row {
     border-color: grey;
+}
+.col-xs-10 {
+    border-color: blue
+}
+
+.col-xs-2 {
+    border-color: green
 }
